@@ -18,5 +18,5 @@
 """
 $Id$
 """
-from Globals import package_home
+from App.Common import package_home
 PACKAGE_HOME = package_home(globals())
